@@ -11,8 +11,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
- 
+
+
+
   <dependencies>
     <dependency>
     <groupId>junit</groupId>
@@ -25,5 +29,50 @@
    	  <artifactId>formatter-maven-plugin</artifactId>
    	  <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.7.9</version>
+      <type>maven-plugin</type>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <!-- Code Coverage report generation -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.6</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>generate-code-coverage-report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/jacoco</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
